# asteroidssssssssssssssssplus

./: .gitignore  Cargo.nix  Cargo.toml  Justfile  flake.nix  meson.build  readme.org  tmp.c
src/: engine.c  gameobjects.c  gen_res.sh  main.c  main.rs  repl.c  shell.c  terminal.c  utils.c
